# LanCopy

./: .editorconfig  .gitattributes  .gitignore  9_FUNCIONALIDADES_AVANZADAS_IMPLEMENTADAS.md  ACCION_INMEDIATA_WISHLIST.md  AGENTS.md  ANALISIS_AMULE_EMULE_GITHUB.md  ARREGLAR_Y_COMPILAR.bat  AUDITORIA_PETICIONES_COMPLETA.md  App.axaml  App.axaml.cs  BACKUP_Y_COMMIT.bat  BOOTSTRAP_NODES_IMPLEMENTADO.md  BUSQUEDAS_AUTOMATICAS_MULTI_RED.md  BUSQUEDA_SOLO_EMULE.md  CAPTURA_AMULE.md  CHANGELOG.md  COMANDOS_INCORPORACION.bat  COMPILACION_EXITOSA.md  COMPILACION_EXITOSA_MULTI_RED.md  COMPILACION_RUST_EXITOSA.md  COMPILAR_AHORA.bat  COMPILAR_FORZADO.bat  COMPILAR_Y_VERIFICAR.bat  CONFIGURACION_SOLO_EMULE.md  CONTROL_CONEXION_SOULSEEK.md  ConfirmDialog.cs  ConsentDialog.cs  DIAGNOSTICO_EMULE_BUSQUEDA.md  Diagnostics.cs  EJECUTAR_INCORPORACION.txt  EMULE_INTEGRATION_COMPLETED.md  ERRORES_COMPILACION_PREEXISTENTES.md  ESTADO_COMPILACION_POST_ARREGLO.md  ESTADO_FINAL_COMPILACION.md  ESTADO_FINAL_RUST.md  EXPERT_LEVEL_COMPLETE.md  FASE_1_MEJORAS_COMPLETADAS.md  FILTRADO_AVANZADO_IMPLEMENTADO.md  FIX_COLA_DESCARGAS.md  (+257 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
Dialogs/: ChatWindow.cs  ConfirmDialog.cs  InputDialog.cs  MoreAccessDurationDialog.cs  ProgressWindow.cs  SplashScreen.cs  TlsCompatibilityDialog.cs  TrustedDevicesDialog.cs  WelcomeDialog.cs
Infrastructure/: ServiceRegistry.cs
LanCopy/: .gitignore  App.axaml  App.axaml.cs  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConfirmDialog.cs  ConsentDialog.cs  InputDialog.cs  LanCopy.csproj  MainWindow.Browsers.cs  MainWindow.Connection.cs  MainWindow.ContextMenus.cs  MainWindow.Features.cs  MainWindow.Persistence.cs  MainWindow.QueueStatus.cs  MainWindow.ServerProfiles.cs  MainWindow.Transfer.cs  MainWindow.axaml  MainWindow.axaml.cs  PRIVACY.md  PUBLISHING.md  README.md
LanCopy.Cli/: LanCopy.Cli.csproj  Program.cs
Localization/: Loc.cs
Models/: BulkObservableCollection.cs  ChatMessage.cs  FileEntry.cs  QueueItem.cs  TransferRecord.cs
ScoreDown/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ScoreDown.csproj  build_log.txt
Services/: AuditService.cs  CertTrust.cs  CommandAuthorizer.cs  FavoriteFoldersService.cs  FileServer.cs  (+31 more)
_archived_winforms/RustCore/: Cargo.toml  build.bat  clean_and_build.cmd  copy_dll.cmd
_archived_winforms/RustCore/src/: lib.rs
_archived_winforms/rust_core/: Cargo.toml  README.md  build.bat  build_and_log.bat  build_rust.bat  build_verbose.ps1  build_with_msvc.bat  compile_test.bat  debug_build.ps1  diagnose.bat  diagnostico_completo.bat  setup_msvc_and_build.ps1  test_compilation.bat
_archived_winforms/rust_core/src/: advanced_features.rs  bloom.rs  file_operations.rs  id3_parser.rs  language_detection.rs  lib.rs  lib_minimal.rs  lib_minimal_test.rs  lib_test.rs  lru_cache.rs  metadata.rs  parallel_list.rs  parallel_list_v2.rs  search.rs  search_filter.rs  search_index.rs  worker_pool.rs
_archived_winforms/slsk_native/: Cargo.toml  build_rust.bat
_archived_winforms/slsk_native/src/: lib.rs
rust_integration/: Cargo.toml  README.md  build.bat
rust_integration/src/: dedup.rs  hash.rs  lib.rs  text.rs
slsk_optimizer/: Cargo.toml  INSTALL.bat  README.md  build_and_deploy.bat
slsk_optimizer/src/: lib.rs
(+2003 files in other folders)
