[package]
name = "slskdown_core"
version = "1.0.0"
edition = "2021"
authors = ["SlskDown Team"]
description = "High-performance core components for SlskDown"

[lib]
crate-type = ["cdylib"]
name = "slskdown_core"

[dependencies]
# Hashing ultra-rápido
blake3 = "1.5"
fxhash = "0.2"

# Paralelismo
rayon = "1.8"

# Regex optimizado
regex = "1.10"
once_cell = "1.19"

# Serialización eficiente
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
log = "0.4"

# Testing utilities
tempfile = "3.8"

# System utilities
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
