[package]
name = "slsk_optimizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "slsk_optimizer"
crate-type = ["cdylib"]

[dependencies]
regex = "1.10"
once_cell = "1.19"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
lopdf = { version = "0.32", optional = true }

[features]
default = []
pdf = ["lopdf"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
