[package]
name = "slskdown_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "slskdown_core"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
dashmap = "5.4"
moka = { version = "0.12", features = ["future"] }
thiserror = "1.0"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
