[package]
name = "slskdown_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "slskdown_core"
crate-type = ["cdylib"]  # Genera DLL para Windows

[dependencies]
probabilistic-collections = "0.7"  # Bloom filters optimizados
rayon = "1.8"            # Paralelización automática
tantivy = "0.22"         # Motor de búsqueda full-text
dashmap = "6.1"          # HashMap concurrente sin locks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
once_cell = "1.19"
lazy_static = "1.4"
num_cpus = "1.16"
unicode-normalization = "0.1"
zstd = "0.13"
rand = "0.8"
aho-corasick = "1.1"

[dev-dependencies]
tempfile = "3.8"            # Archivos temporales para tests
bloomfilter = "1.0"      # Bloom filters para deduplicación
flate2 = "1.0"           # Compresión DEFLATE

[profile.release]
opt-level = 3        # Máxima optimización
lto = true          # Link-time optimization
codegen-units = 1   # Mejor optimización (más lento compilar)
panic = "abort"     # Menor tamaño binario
